--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
-    "axios": "^1.2.4"
+    "axios": "^1.2.4",
+    "joi": "^17.7.0",
+    "@hookform/resolvers": "^2.9.10",
+    "react-hook-form": "^7.42.1"
   },
   "scripts": {
     "start": "react-scripts start",
